Linkedin-link gefixt :)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
     <hr>
     <p>
-    Created by <a href="nl.linkedin.com/in/jillroelofs/" target="_blank">Jill Roelofs</a>. Based on 2048 by Gabriele Cirulli.</a>
+    Created by <a href="http://nl.linkedin.com/in/jillroelofs/" target="_blank">Jill Roelofs</a>. Based on 2048 by Gabriele Cirulli.</a>
     </p>
     <p>
     <a href="https://twitter.com/Jill_Roelofs" class="twitter-follow-button" data-show-count="false">Follow @Jill_Roelofs</a>
